--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -116,6 +116,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix"></div>
   </div>
   <!--{include file="./footer.htm"}-->
   <script src="<!--{$article.hits.script}-->"></script>
