--- a/template/default/category.index.htm
+++ b/template/default/category.index.htm
@@ -82,6 +82,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix"></div>
   </div>
   <!--{include file="./footer.htm"}-->
 </body>
