--- a/template/default/search.htm
+++ b/template/default/search.htm
@@ -85,6 +85,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix"></div>
   </div>
   <!--{include file="./footer.htm"}-->
 </body>
