--- a/template/default/tag.index.htm
+++ b/template/default/tag.index.htm
@@ -94,6 +94,7 @@
         </div>
       </div>
     </div>
+    <div class="clearfix"></div>
   </div>
   <!--{include file="./footer.htm"}-->
 </body>
