--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -14,7 +14,7 @@
   <!-- <div class="l-header-ad"> 文章顶部横幅通栏 960x60 </div> -->
   <div id="body">
     <div class="main-col">
-      <div id="guide"><strong>当前位置：</strong> <a href="<!--{$site.url}-->">网站首页</a> &nbsp;&raquo;&nbsp;<!--{$category.nav}-->&nbsp;&raquo;&nbsp;<!--{$article.link}-->&nbsp;&raquo;&nbsp;正文</div>
+      <div id="guide"><strong>当前位置：</strong> <a href="<!--{$site.url}-->"><!--{$site.title}--></a> &nbsp;&raquo;&nbsp;<!--{$category.nav}-->&nbsp;&raquo;&nbsp;<!--{$article.link}-->&nbsp;&raquo;&nbsp;正文</div>
       <div id="page">
         <h1><!--{$article.title}--></h1>
         <div class="article-info">
