--- a/template/default/search.htm
+++ b/template/default/search.htm
@@ -44,8 +44,8 @@
               <!--{/if}-->
               <p class="title"><a href="<!--{$article_list.url}-->" target="_blank"><!--{$article_list.title}--></a></p>
               <p class="info"><!--{$article_list.description}--></p>
+              <p class="clearfix"></p>
             </li>
-            <div class="clearfix"></div>
             <!--{/iCMS}-->
           </ul>
         </div>
