--- a/template/default/tag.index.htm
+++ b/template/default/tag.index.htm
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!--{include file="./header.htm"}-->
-  <div class="l-header-ad"><!--文章顶部横幅通栏 960x60--></div>
+  <!-- <div class="l-header-ad">文章顶部横幅通栏 960x60</div> -->
   <div id="body">
     <div class="main-col">
       <div id="guide">
