cids在数据多的时候有问题

--- a/template/default/index.htm
+++ b/template/default/index.htm
@@ -68,7 +68,7 @@
           <div class="tab-pane" id="cat_content_<!--{$cat_list.cid}-->">
           <div class="index_content">
             <ul class="media-list">
-              <!--{iCMS:article:list loop="true" user="true" tags="true" pic="true" sub="true" row="10" cids="$cat_list.cid"}-->
+              <!--{iCMS:article:list loop="true" user="true" tags="true" pic="true" sub="true" row="10" cid="$cat_list.cid"}-->
               <li class="media">
                 <a class="pull-left" href="<!--{$article_list.url}-->">
                 <img class="media-object lazy" data-src="<!--{$article_list.pic.url}-->" src="<!--{$site.urls.ui}-->/img/img-default.png">
