--- a/template/default/category.list.htm
+++ b/template/default/category.list.htm
@@ -33,7 +33,7 @@
       <div id="page">
         <div class="list-item">
           <ul>
-            <!--{iCMS:article:list loop="true" page="true" row="10" cid="$category.cid"}-->
+            <!--{iCMS:article:list loop="true" page="true" sub="true" row="10" cid="$category.cid"}-->
             <li class="item-detail">
               <!--{if $article_list.pic.url}-->
               <p class="pic"> <a href="<!--{$article_list.url}-->" target="_blank"><img src="<!--{$article_list.pic.url}-->"></a> </p>
