--- a/template/default/category.index.htm
+++ b/template/default/category.index.htm
@@ -58,7 +58,7 @@
         </div>
         <div class="bd">
           <ul class="artical-top artical-top-num">
-            <!--{iCMS:article:list loop="true" row="10" orderby="hot" cid="$category.cid"}-->
+            <!--{iCMS:article:list loop="true" row="10" orderby="hot" sub="true" cid="$category.cid"}-->
             <!--{if $article_list.rownum<4}-->
             <li class="top-1"><span><!--{$article_list.rownum}--></span>
               <p> <a href="<!--{$article_list.url}-->" target="_blank"><!--{$article_list.title}--></a> </p>
