--- a/template/default/tag.index.htm
+++ b/template/default/tag.index.htm
@@ -36,7 +36,7 @@
         </div>
         <div class="list-item">
           <ul>
-            <!--{iCMS:article:list loop="true" page="true" row="10" tid="$tag.id"}-->
+            <!--{iCMS:article:list loop="true" page="true" row="10" tids="$tag.id"}-->
             <li class="item-detail">
               <!--{if $article_list.pic.url}-->
               <p class="pic"><a href="<!--{$article_list.url}-->" target="_blank"><img src="<!--{$article_list.pic.url}-->"></a></p>
