<div class="iCMS_register_wrap">

--- a/template/iCMS/user/login.close.htm
+++ b/template/iCMS/user/login.close.htm
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="<!--{$site.urls.ui}-->/iCMS.loginreg-6.0.0.css" type="text/css" />
 </head>
 <body>
-  <div id="body" class="login_wrap">
+  <div class="iCMS_login_wrap">
     <div class="logo"> <a href="<!--{$site.url}-->" class="icms fl" title="<!--{$site.title}-->"><!--{$site.title}--></a> </div>
     <div class="content pl20 pr20 pt40">
       <div class="clear"></div>
