--- a/template/iCMS/user/register.close.htm
+++ b/template/iCMS/user/register.close.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="iCMS_register_wrap">
-    <div class="logo"> <a href="<!--{$site.url}-->" class="icms fl" title="<!--{$site.title}-->"><!--{$site.title}--></a> </div>
+    <div class="logo"> <a href="<!--{$site.url}-->" class="iCMS fl" title="<!--{$site.title}-->"><!--{$site.title}--></a> </div>
     <div class="content pl20 pr20 pt40">
       <div class="clear"></div>
       <div class="alert">
