添加手机版 关闭注册登陆页

--- a/template/iCMS/user/register.close.htm
+++ b/template/iCMS/user/register.close.htm
@@ -10,11 +10,12 @@
   <div class="iCMS_register_wrap">
     <div class="logo"> <a href="<!--{$site.url}-->" class="iCMS fl" title="<!--{$site.title}-->"><!--{$site.title}--></a> </div>
     <div class="content pl20 pr20 pt40">
-      <div class="clear"></div>
+      <div class="clearfix mt10"></div>
       <div class="alert">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong>Warning!</strong> 系统已经关闭注册功能! </div>
-      <div class="clear"></div>
+        <strong>Warning!</strong> 系统已经关闭注册功能!
+      </div>
+      <div class="clearfix mt10"></div>
     </div>
   </div>
   <!--{include file="{iTPL}/footer.htm"}-->
