--- a/template/weixin/category.index.htm
+++ b/template/weixin/category.index.htm
@@ -14,7 +14,7 @@
 			</div>
 			<div class="index_pic_list">
 				<ul class="media-list">
-					<!--{iCMS:article:list loop="true" row="5" cid="$category.cid"}-->
+					<!--{iCMS:article:list loop="true" page="true" row="5" sub="true" cid="$category.cid"}-->
 					<li class="media">
 						<!--{if $article_list.first && $article_list.pic}-->
 						<div class="media-pic">
