--- a/public/theme/default.css
+++ b/public/theme/default.css
@@ -153,4 +153,4 @@ body { background: #FFF url(img/body-bg.png) repeat-x; }
 .comment_form { border-top: 1px solid #eaeaea; }
 /* --- */
 .prev-next { float: right; margin-right: 20px; }
-#bdshare { float: right !important; line-height: 28px; margin-right: 10px; }
+#bdshare { float: right !important; line-height: 28px; margin-right: 10px; margin-top: 8px;}
