--- a/template/default/category.index.htm
+++ b/template/default/category.index.htm
@@ -16,7 +16,12 @@
     <div class="main-col">
       <div id="guide">
         <div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare"> <span class="bds_more" style="background:#fff!important;padding:0;">分享到：</span> <a class="bds_qzone"></a> <a class="bds_tsina"></a> <a class="bds_tqq"></a> <a class="bds_renren"></a> <a class="bds_t163"></a> <a class="shareCount" style="display:none"></a> </div>
-        <strong>当前位置：</strong> <a href="<!--{$site.url}-->"><!--{$site.title}--></a> &nbsp;&raquo;&nbsp;<!--{$category.nav}-->&nbsp;&raquo;&nbsp;列表 </div>
+        <ul class="breadcrumb">
+          <li><a href="<!--{$site.url}-->">首页</a> <span class="divider">»</span></li>
+          <!--{$category.nav}-->
+          <li class="active">列表</li>
+        </ul>
+      </div>
       <!-- Baidu Button BEGIN -->
       <script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=0" ></script>
       <script type="text/javascript" id="bdshell_js"></script>
