--- a/template/mobile/tag.index.htm
+++ b/template/mobile/tag.index.htm
@@ -13,7 +13,7 @@
       <div id="iCMS-article-list" class="article_list">
         <h3 class="title"><span><!--{$tag.name}--></span></h3>
         <ul class="list">
-          <!--{iCMS:article:list loop="true" page="true" user="true" row="10" tid="$tag.id"}-->
+          <!--{iCMS:article:list loop="true" page="true" user="true" row="10" tids="$tag.id"}-->
           <li class="full">
             <a href="<!--{$article_list.url}-->">
               <!--{if $article_list.pic.url}-->
