--- a/template/weixin/tag.index.htm
+++ b/template/weixin/tag.index.htm
@@ -14,7 +14,7 @@
 			</div>
 			<div class="index_pic_list">
 				<ul class="media-list">
-					<!--{iCMS:article:list loop="true" row="5" tid="$tag.id"}-->
+					<!--{iCMS:article:list loop="true" row="5" tids="$tag.id"}-->
 					<li class="media">
 						<!--{if $article_list.first && $article_list.pic}-->
 						<div class="media-pic">
