--- a/template/mobile/article.htm
+++ b/template/mobile/article.htm
@@ -51,7 +51,7 @@
           </div>
           <div id="pages_next" class="hide">
             <!--{if !$article.page.end}-->
-            <a href="<!--{$article.page.pageurl}-->"/>下一页</a>
+            <a href="<!--{$article.page.next}-->" rel="nofollow"/>下一页</a>
             <!--{/if}-->
           </div>
         </article>
@@ -100,7 +100,7 @@
         $(".article_pagenav").html(pages_nav);
       },function(path, page){
         return function(curPage) {
-          return path.replace("{P}",curPage);
+          return path.replace(/_\d+/,'_'+curPage);
         };
       });
       //滚动加载 开关
