--- a/template/weixin/article.htm
+++ b/template/weixin/article.htm
@@ -45,7 +45,7 @@
 			</div>
 			<div id="pages_next" class="hide">
 				<!--{if !$article.page.end}-->
-				<a href="<!--{$article.page.pageurl}-->"/>下一页</a>
+				<a href="<!--{$article.page.next}-->"/>下一页</a>
 				<!--{/if}-->
 			</div>
 			</article>
@@ -72,7 +72,7 @@
 				$(".article_pagenav").html(pages_nav);
 			},function(path, page){
 		        return function(curPage) {
-		          return path.replace("{P}",curPage);
+		          return path.replace(/_\d+/,'_'+curPage);
 		        };
 		    });
 		})
