--- a/public/ui/iCMS.mobile-6.0.0.css
+++ b/public/ui/iCMS.mobile-6.0.0.css
@@ -73,6 +73,7 @@ a.circle { color: #fff; }
 /* pagination */
 .iCMS_pagination { margin: 10px 0px; clear: both; max-height: 30px; position: relative; text-align: center }
 .iCMS_pagination a, .iCMS_pagination span { display: inline-block; padding: 4px 12px; line-height: 20px; text-decoration: none; background-color: #fff; border: 1px solid #ddd; border-left-width: 0 }
+.iCMS_pagination span.current,.iCMS_pagination span.page_nowindex{background-color: #ddd;color: #333;}
 .iCMS_pagination a:hover, .iCMS_pagination a:focus { background-color: #f5f5f5 }
 .iCMS_pagination a.page_nowindex { color: #999; cursor: default }
 .iCMS_pagination a:first-child, .iCMS_pagination span:first-child { border-left-width: 1px; -webkit-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px; border-top-left-radius: 4px; -moz-border-radius-bottomleft: 4px; -moz-border-radius-topleft: 4px }
