--- a/template/mobile/user/manage/publish.htm
+++ b/template/mobile/user/manage/publish.htm
@@ -58,7 +58,7 @@
 	<div class="clearfix mt10"></div>
 	<div class="editor">
 		<!--{if !$article.mobile && $article.id}-->
-		<p class="alert alert-warning alert-dismissable"><i class="fa fa-warning"></i> 本文章由PC端发布 在手机上编辑可能造成相关格式丢失</p>
+		<p class="alert alert-warning alert-dismissable"><i class="fa fa-warning"></i> 本文章由桌面端发布 在手机上编辑可能造成相关格式丢失</p>
 		<!--{/if}-->
 	  	<textarea name="body" id="abody" class="form-control" rows="15" placeholder="请输入文章的内容"><!--{$article_data.body}--></textarea>
 	</div>
