--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -21,6 +21,7 @@ body { background-color: #EDEDED; color: #000; }
 .table th { background: #fafafa url("table_head.gif") repeat-x 0 100%; }
 .table td { background-color: #fff; }
 .table tbody .checker { margin-left: 3px !important; }
+.help-inline hr{margin: 2px 0px;}
 /* modal */
 .modal { z-index: 9999 !important; margin: 0px !important; display: none; }
 .modal .modal-header { padding: 3px 15px; -webkit-border-top-left-radius: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topleft: 4px; -moz-border-radius-topright: 4px; border-top-left-radius: 4px; border-top-right-radius: 4px; }
