--- a/template/mobile/user/register.close.htm
+++ b/template/mobile/user/register.close.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
   <head>
-    <title> <title>Warning! 系统已经关闭注册功能!</title></title>
+    <title>Warning! 系统已经关闭注册功能!</title></title>
     <meta name="keywords" content="<!--{$site.keywords}-->" />
     <meta name="description" content="<!--{$site.description}-->"/>
     <!--{iCMS:public:ui}-->
