--- a/template/iCMS/sitemap.baidu.htm
+++ b/template/iCMS/sitemap.baidu.htm
@@ -7,7 +7,6 @@
         <priority>0.8</priority>
     </url>
     <!--{if $cid}-->
-
         <!--{iCMS:category:list loop="true" stype='sub' row="1000" cid="$cid"}-->
         <url>
             <loc><!--{$category_list.url|escape}--></loc>
@@ -15,10 +14,17 @@
             <priority>1.0</priority>
         </url>
     	<!--{/iCMS}-->
-        <!--{iCMS:article:list loop="true" row="5000" sub="all" cid="$cid"}-->
+        <!--{iCMS:article:list loop="true" row="10000" sub="all" cid="$cid"}-->
         <url>
             <loc><!--{$article_list.url|escape}--></loc>
             <lastmod><!--{$article_list.pubdate|date:"Y-m-d"}--></lastmod>
+            <changefreq>always</changefreq>
+        </url>
+        <!--{/iCMS}-->
+        <!--{iCMS:tag:list loop="true" row="1000" sub="all" cid="$cid"}-->
+        <url>
+            <loc><!--{$tag_list.url|escape}--></loc>
+            <lastmod><!--{$iCMS.NOW|date:"Y-m-d"}--></lastmod>
             <changefreq>always</changefreq>
         </url>
         <!--{/iCMS}-->
@@ -44,6 +50,12 @@
             <changefreq>always</changefreq>
         </url>
         <!--{/iCMS}-->
-
+        <!--{iCMS:tag:list loop="true" row="1000"}-->
+        <url>
+            <loc><!--{$tag_list.url|escape}--></loc>
+            <lastmod><!--{$iCMS.NOW|date:"Y-m-d"}--></lastmod>
+            <changefreq>always</changefreq>
+        </url>
+        <!--{/iCMS}-->
     <!--{/if}-->
 </urlset>
