--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -59,7 +59,7 @@ iCMS.config.UI = '<!--{$iCMS.UI}-->';
       <script type="text/plain" id="editor" style="width:100%;height:360px;"><!--{$article_data.body}--></script>
       <div class="clearfix"></div>
       <div class="form-actions">
-        <button class="btn btn-primary" type="submit" id="iCMS-article"><i class="fa fa-check"></i> 提交</button>
+        <button class="btn btn-large btn-primary" type="submit" id="iCMS-article"><i class="fa fa-check"></i> 提交</button>
       </div>
     </div>
   </form>
